# IronTree

./: .gitignore  Cargo.toml  README.md
depFile/: mongo.yml
iron-tree-frontend/: README.md  index.html  jsconfig.json  package.json  tailwind.config.js  vite.config.js
iron-tree-frontend/public/mock/: menu.json
iron-tree-frontend/src/: index.less  main.jsx  router.jsx
iron-tree-frontend/src/assets/css/: ironTabs.css  ironTabs.less
iron-tree-frontend/src/components/: IronTabs.jsx  MenuList.jsx
iron-tree-frontend/src/components/Admin/: Banner.jsx  DashContent.jsx
iron-tree-frontend/src/components/ToggleTheme/: HeaderRightBox.jsx  ToggleTheme.jsx
iron-tree-frontend/src/store/: store.jsx
iron-tree-frontend/src/utils/: base.js  http.js
iron-tree-frontend/src/views/Admin/: Admin.jsx
iron-tree-frontend/src/views/Admin/Dash/: Dash.jsx
iron-tree-frontend/src/views/Admin/User/: Menu.jsx  Role.jsx  User.jsx
iron-tree-frontend/src/views/Home/: Home.jsx
iron-tree-frontend/src/views/Login/: Login.jsx  login.css
iron-tree-frontend/src/views/NoFound/: NoFound.jsx  index.less
src/: client.rs  lib.rs  main.rs  middleware.rs  router.rs
src/controller/: api.rs  guest.rs
src/db/: init.rs  mod.rs
src/db/db_model/: menu.rs  mod.rs  role.rs  user.rs
src/model/: global.rs  mod.rs  user.rs
src/model/request_model/: menu.rs  user.rs
src/model/response_model/: guest.rs  menu.rs  mod.rs
src/router/: api.rs  guest.rs  mod.rs
src/services/: api.rs  guest.rs  mod.rs
src/utils/: crypt.rs  custom.rs  mod.rs  tests.rs
