[package]
name = "iron_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["json", "macros"] }
captcha-rs = "0.2.10"
moka = { version = "0.12.1", features = ["sync"] }  # sync: 同步缓存
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace", "default", "compression-full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
