[package]
name = "iron_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.7.1", features = ["json", "macros"] }
captcha-rs = "0.2.10"   # 验证码生成
moka = { version = "0.12.1", features = ["sync"] }  # sync: 同步缓存
mongodb = "2.7.1"
nanoid = "0.4.0"        # 类uuid更小更快的生成
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace", "default", "compression-full", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["ansi"] }
utoipa = { version = "4.1.0", features = ["axum_extras"] }  # openapi生成
utoipa-rapidoc = { version = "2.0.0", features = ["axum"] }
utoipa-redoc = { version = "2.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }     # swagger ui
